Fix network labels align to right on mobile

--- a/src/app/settings/network-info/network-info.component.scss
+++ b/src/app/settings/network-info/network-info.component.scss
@@ -5,7 +5,9 @@ app-network-info {
 
   .left-label {
     padding: 5px;
-    text-align: right;
+    @media (min-width: 992px) {
+      text-align: right;
+    }
   }
   .row {
     align-items: center;
